# presecurity

./: .gitignore  LICENSE  README.md  pyproject.toml  한글.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/: development-plan.md  implementation-readiness.md  install-from-github.md  supported-platforms.md
examples/: README.md
examples/backend/go/: http_server.go
examples/backend/java-spring/: UserController.java
examples/backend/kotlin-ktor/: Application.kt
examples/backend/node-express/: server.js
examples/backend/php-laravel/: UserController.php
examples/backend/python-fastapi/: main.py
examples/backend/ruby-rails/: users_controller.rb
examples/config/docker/: Dockerfile
examples/config/github-actions/: workflow.yml
examples/config/gradle/: build.gradle
examples/config/json/: appsettings.json
examples/config/maven/: pom.xml
examples/config/terraform/: main.tf
examples/config/xml/: android-network-security-config.xml
examples/config/yaml/: github-actions.yml
examples/mobile/android-java/: WebActivity.java
examples/mobile/android-kotlin/: MainActivity.kt
examples/mobile/flutter-dart/: api_client.dart
examples/mobile/ios-objective-c/: LoginViewController.m
examples/mobile/ios-plist/: Info.plist
examples/mobile/ios-swift/: NetworkClient.swift
examples/native/c/: vulnerable.c
examples/native/cpp/: vulnerable.cpp
src/presecurity/: __init__.py  cli.py  doctor.py  i18n.py  intent.py  progress.py  rules.py  scanner.py
tests/: test_scanner.py
(+11 files in other folders)
