[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "presecurity"
version = "0.1.0"
description = "Lightweight agent-native security scanning and autofix for Claude Code and Codex."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "presecurity"}]
keywords = ["security", "sast", "owasp", "claude-code", "codex", "plugin"]

[project.scripts]
presecurity = "presecurity.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

